tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_43.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  x := ((((q DIV 200) * (x * 1223)) + ((0 MOD y) DIV (- 0))) - (- ((x DIV 1) + (1 DIV 200))));
               x := (+ (- ((0 * 2) * (200 MOD z))));
               x := ((((1223 MOD 1) DIV (200 DIV z)) + ((1223 MOD 2) - (x MOD z))) - (((2 - 0) DIV (1 MOD 2)) * ((1223 * z) MOD (+ 0))));
               r := ((((x MOD 1223) DIV (+ y)) MOD ((+ 1) + (1223 + y))) = ((+ (x + x)) DIV (+ (z * 1))));
               p := ((+ ((1 * z) * (x * 1223))) # (+ ((2 * x) DIV (x MOD 2))));
               r := (((+ (1 MOD z)) # (- (- y))) OR ((- (- 1)) <= ((- y) - (y MOD 0))));
               x := (- (((- y) MOD (2 MOD 1223)) + ((z * x) - (2 * 200))));
               x := (- (((2 MOD 2) DIV (- 2)) DIV ((z * z) DIV (y MOD 2))));
               x := (+ ((+ (+ 200)) MOD ((x * y) DIV (1 - x))));
               q := (((+ (y * 0)) - ((2 - 1223) DIV (+ 1))) = (- ((+ x) MOD (y MOD 0))))
END Test11.